# pkg/api/v1/aadhaar_service.pb.validate.go
@@ -1453,6 +1453,8 @@ func (m *VerifyOtpAndGetAadhaarResponse_Data) Validate() error {
 
 	// no validation rules for XmlFile
 
+	// no validation rules for XmlSignatureValidated
+
 	return nil
 }
 
